--- a/package.xml
+++ b/package.xml
@@ -15,9 +15,11 @@
 
 
   <depend>pcl_conversions</depend>
+  <depend>cob_scan_unifier</depend>
   <depend>pcl_ros</depend>
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
   <depend>roscpp</depend>
+  <depend>laser_geometry</depend>
 
 </package>
